# Bragg

Kod/: README.md  pyproject.toml
Kod/kod/: config.py  factorial.py  func_lib.py  main.py  read_exyz.ipynb  read_exyz_multiple_ions.ipynb  read_geant4.py  simulation.py  studies.ipynb
Kod/kod/Archive/: manipulate_ioniz_file.py  old_plot.py  remote_test.py  srim_test.py  test.py
Kod/kod/DataFiles/: Ca40_600MeV_100_events_CF4_500mbar_train.txt  Ca40_800MeV_100_events_CF4_500mbar_train.txt  Ca_data.txt  EXYZ.txt  EXYZ_Be4-15.0MeV_2023-04-04_1357.txt  EXYZ_Be8-20.0MeV_2023-04-04_1357 copy.txt  EXYZ_Be8-20.0MeV_2023-04-04_1357.txt  EXYZ_C12-100.0MeV_2023-04-04_1335 copy.txt  EXYZ_C12-100.0MeV_2023-04-04_1335.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1401.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1402.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1403.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1439.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1445.txt  EXYZ_Ca40-600.0MeV_2023-04-27_1454.txt  EXYZ_Ca40-600.0MeV_2023-05-03_1014.txt  EXYZ_Ca40-600.0MeV_2023-05-03_1015.txt  EXYZ_Ca40-600.0MeV_2023-05-03_1016.txt  EXYZ_Ca40-600.0MeV_2023-05-04_1448.txt  EXYZ_Ca40-600.0MeV_2023-05-04_1504.txt  EXYZ_Ca40-799.0MeV_2023-04-27_1443.txt  EXYZ_Ca40-799.0MeV_2023-04-27_1444.txt  EXYZ_Ca40-800.0MeV_2023-04-04_1253 copy.txt  EXYZ_Ca40-800.0MeV_2023-04-04_1253.txt  EXYZ_Ca40-800.0MeV_2023-04-04_1722.txt  EXYZ_Ca40-800.0MeV_2023-04-04_1732.txt  EXYZ_Ca40-800.0MeV_2023-04-27_1337.txt  EXYZ_Ca40-800.0MeV_2023-04-27_1352.txt  EXYZ_Ca40-800.0MeV_2023-04-27_1353.txt  EXYZ_Ca40-800.0MeV_2023-04-27_1354.txt  EXYZ_Ca40_800MeV.txt  (+65 more)
(+34 files in other folders)
